syntax = "proto3";

package coinbase.staking.v1alpha1;

option go_package = "github.com/coinbase/staking-client-library-go/gen/go/coinbase/staking/v1alpha1";

import "google/api/field_behavior.proto";
import "google/api/resource.proto";

// An Action resource, which represents an action you may take on a network,
// posted to a validator. (i.e. stake, unstake)
message Action {
  option (google.api.resource) = {
    type: "staking.coinbase.com/Action"
    pattern: "protocols/{protocol}/networks/{network}/actions/{action}"
    singular: "action"
    plural: "actions"
  };

  // The resource name of the Action.
  // Format: protocols/{protocolName}/networks/{networkName}/actions/{actionName}
  // Ex: protocols/polygon/networks/goerli/validators/stake
  string name = 1;
}

// The request message for ListActions.
message ListActionsRequest {
  // The resource name of the parent that owns
  // the collection of actions.
  // Format: protocols/{protocol}/networks/{network}
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      child_type: "staking.coinbase.com/Action"
    }];
}

// The response message for ListActions.
message ListActionsResponse {
  // The list of actions.
  repeated Action actions = 1;
}
